changing get method & adding request